# floq-reports-api-deprecated

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  deploy  dist.bash  floq-reports.cabal  package.yaml  stack.yaml  urlencode
app/: Main.hs
deployment/: deploy  setup_gcloud
src/: Database.hs  Main.hs  Server.hs  Types.hs
