name:                floq-reports
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ehamberg/floq-reports#readme
license:             BSD3
license-file:        LICENSE
author:              Erlend Hamberg
maintainer:          erlend@hamberg.no
copyright:           Erlend Hamberg
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable floq-reports
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Database
                     , Types
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , http-media
                     , interpolatedstring-perl6
                     , optparse-applicative
                     , postgresql-simple
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , vector
                     , wai
                     , warp
