name:                floq-reports
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ehamberg/floq-reports#readme
license:             BSD3
license-file:        LICENSE
author:              Erlend Hamberg
maintainer:          erlend@hamberg.no
copyright:           Erlend Hamberg
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  exposed-modules:     Database
                     , Types
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , http-media
                     , iconv
                     , jose-jwt
                     , postgresql-simple
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , vector
                     , wai
                     , wai-cors

executable floq-reports
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , floq-reports
                     , optparse-applicative
                     , postgresql-simple
                     , string-conversions
                     , warp
